--- a/packages/api-utils/package.json
+++ b/packages/api-utils/package.json
@@ -33,9 +33,14 @@
     "@kienleholdings/eslint-config-base": "^0.1.8",
     "@kienleholdings/markdownlint-config": "^0.1.0",
     "@kienleholdings/prettier-config": "^0.1.3",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
     "eslint": "^7.32.0",
     "markdownlint-cli2": "^0.3.0",
+    "next": "^11.1.2",
     "prettier": "^2.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "^4.4.2"
   }
 }
