NXT-4 CORS Middleware

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,2 +1,3 @@
 ARG VARIANT="14"
-FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:0-${VARIANT}
+# TODO: Change this back to the stable version once M1 support improves
+FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:dev-${VARIANT}-bullseye
