--- a/packages/api-utils/package.json
+++ b/packages/api-utils/package.json
@@ -39,7 +39,7 @@
     "@types/react-dom": "^17.0.9",
     "eslint": "^7.32.0",
     "markdownlint-cli2": "^0.3.0",
-    "next": "^11.1.2",
+    "next": "^12.0.0",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -48,6 +48,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "next-api-middleware": "^1.0.1",
-    "nextjs-cors": "^2.0.0"
+    "nextjs-cors": "^2.0.0",
+    "yup": "^0.32.11"
+  },
+  "peerDependencies": {
+    "next": "^12.0.0",
+    "yup": "^0.32.11"
   }
 }
